@@ -34,9 +34,9 @@ class WebPasteboardHelper : public WebCore::PasteboardHelper
 {
 public:
     WebPasteboardHelper(WebHTMLView* view) : m_view(view) {}
-    virtual WebCore::String urlFromPasteboard(const NSPasteboard*, WebCore::String* title) const;
-    virtual WebCore::String plainTextFromPasteboard(const NSPasteboard*) const;
-    virtual DOMDocumentFragment* fragmentFromPasteboard(const NSPasteboard*) const;
+    virtual WebCore::String urlFromPasteboard(NSPasteboard*, WebCore::String* title) const;
+    virtual WebCore::String plainTextFromPasteboard(NSPasteboard*) const;
+    virtual DOMDocumentFragment* fragmentFromPasteboard(NSPasteboard*) const;
     virtual NSArray* insertablePasteboardTypes() const;
     private:
     WebHTMLView* m_view;
