@@ -2,6 +2,18 @@
 
         Reviewed by Dan Bernstein.
 
+        Remove bogus const qualifiers.
+
+        * WebCoreSupport/WebPasteboardHelper.h:
+        * WebCoreSupport/WebPasteboardHelper.mm:
+        (WebPasteboardHelper::urlFromPasteboard):
+        (WebPasteboardHelper::plainTextFromPasteboard):
+        (WebPasteboardHelper::fragmentFromPasteboard):
+
+2010-06-20  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Dan Bernstein.
+
         Get rid of the extensionToMIME mapping in WebBasePluginPackage
         https://bugs.webkit.org/show_bug.cgi?id=40897
 
